# fangamejs

./: Cargo.toml  app.e60ca3bcaba46f22a2d4.js  engine.e60ca3bcaba46f22a2d4.js  index.html  vendor.e60ca3bcaba46f22a2d4.js
assets/css/: app.e60ca3bcaba46f22a2d4.css
src/: complex.rs  main.rs  render.rs  types.rs
src/mandelbrot/: compute.rs
src/ui/: app.rs  render.rs
